2007-12-05  Tomas Mraz  <t8m@centrum.cz>

	* modules/pam_unix/Makefile.am: Add passverify.h and passverify.c
	as first part of pam_unix refactorization.
	* modules/pam_unix/pam_unix/pam_unix_acct.c: Include passverify.h.
	* modules/pam_unix/pam_unix_passwd.c: Likewise.
	* modules/pam_unix/passverify.c: New file with common functions.
	* modules/pam_unix/passverify.h: Prototypes for the common functions.
	* modules/pam_unix/support.c: Include passverify.h, move
	_unix_shadowed() to passverify.c.
	(_unix_verify_password): Refactor out verify_pwd_hash() function.
	* modules/pam_unix/support.h: Move _unix_shadowed() prototype to
	passverify.h
	* modules/pam_unix/unix_chkpwd.c: Use _unix_shadowed() and
	verify_pwd_hash() from passverify.c.

2007-11-20  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_unix/Makefile.am (unix_chkpwd_LDADD): Don't link
	unix_chkpwd unnecessary against libpam (#1822779).

	* modules/pam_tally/pam_tally.c (tally_log): Map
	pam_modutil_getpwnam to getpwnam if we don't compile
	as module.
	* modules/pam_tally/Makefile.am: Don't link pam_tally_app
	against libpam (#1822779).

2007-11-06  Thorsten Kukuk  <kukuk@thkukuk.de>

	* xtests/tst-pam_group1.c: Include stdlib.h
	* xtests/tst-pam_succeed_if1.c: Likewise.
	* xtests/tst-pam_limits1.c: Likewise.
	* xtests/tst-pam_access1.c: Likewise.
	* xtests/tst-pam_access2.c: Likewise.
	* xtests/tst-pam_access3.c: Likewise.
	* xtests/tst-pam_access4.c: Likewise.
	* xtests/tst-pam_unix1.c: Likewise.
	* xtests/tst-pam_unix2.c: Likewise.
	* xtests/tst-pam_unix3.c: Likewise.
	* xtests/tst-pam_cracklib1.c: Likewise.
	* xtests/tst-pam_cracklib2.c: Likewise.

	* libpam/pam_static_modules.h: Fix name of pam_namespace variable.

2007-11-01  Peter Breitenlohner <peb@mppmu.mpg.de>

	* doc/man/pam_conv.3.xml: Correct typo.

2007-10-30  Peter Breitenlohner <peb@mppmu.mpg.de>

	* modules/pam_rhosts/pam_rhosts_auth.c (__icheckhost): Correct
	misplaced parenthesis.