@@ -1,6 +1,8 @@
 Linux-PAM NEWS -- history of user-visible changes.
 
 * New substack directive in config file syntax.
+* New module pam_tty_audit.so for enabling and disabling tty
+  auditing.
 
 Release 0.99.9.0
 * misc_conv no longer blocks SIGINT; applications that don't want
